# kernel-agent-llm-science

./: =0.33  DOCKERFILE  README.md  ai_cuda_research_results.json  ai_kernelbench_integration.py  ai_kernelbench_results_level_1_20250915_031255.json  ai_kernelbench_results_level_1_20250915_031339.json  autonomous_research_pipeline.py  demo_autonomous_research.py  demo_full_autonomous_pipeline.py  kernelbench_trainer.py  kernelbench_training_plan.json  kernelbench_training_strategy.py  kernelbench_training_summary.md  providers.py  pyproject.toml  real_kernelbench_eval.py  real_kernelbench_results_level_1_20250915_032323.json  requirements.txt  setup_demo.py  simple_ai_cuda_demo.py  test_real_cuda_execution.py
agents/: agent.py  analysis_agent.py  manuscript_agent.py  schemas.py  simple_analysis_agent.py  training_orchestrator.py
autonomous_research_demo/agents4science_submission/: README.md  submission_metadata.json
autonomous_research_demo/analysis/: autonomous_analysis_20250915_025224.json  autonomous_analysis_20250915_030443.json
autonomous_research_demo/logs/: autonomous_step_001.json  autonomous_step_002.json  autonomous_step_003.json  autonomous_step_004.json  autonomous_step_005.json  autonomous_step_006.json  autonomous_step_007.json  autonomous_step_008.json  autonomous_step_009.json  autonomous_step_010.json  autonomous_step_011.json  autonomous_step_012.json  autonomous_step_013.json  autonomous_step_014.json  autonomous_step_015.json  autonomous_step_016.json  autonomous_step_017.json  autonomous_step_018.json  autonomous_step_019.json  autonomous_step_020.json
autonomous_research_demo/manuscripts/: autonomous_research_20250915_025224.md  autonomous_research_20250915_030443.md
autonomous_research_env/: pyvenv.cfg
examples/: softmax_bf16_round0.json
executor/: __init__.py  common.py  cuda_exec.py  executor.py  guards.py  measure.py  timing.py  trtion_exec.py  verify_best.py
grpo/: exemplar_db.py  grpo_loop.py  losses.py  markers.py  prompt_builder.py  reward.py  rewrite.py
providers/: llama_policy.py  transformers_local.py
scripts/: autonomous_research.py  check_markers.py  fastp_from_results.py  gen_tables_fig.py  grpo_train.py  run_plan.py  summarize_plan.py
training_data/: kernelbench_splits.json
