# kernel-agent-llm-science/pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]

[project]
name = "kernel-agent-llm-science"
version = "0.1.0"
description = "Executor+paper scaffold for KernelLLM-Agent"
requires-python = ">=3.10"
dependencies = [
  "torch==2.4.0",
  "triton==3.0.0",
  "numpy>=1.26",
  "pydantic>=2.7",
  "rich>=13.7",
  "matplotlib>=3.8"
]

[tool.setuptools.packages.find]
where = ["."]
