[build-system]
requires = ["setuptools>=68", "wheel"]

[project]
name = "kernel-agent-llm-science"
version = "0.2.0"
description = "Executor + GRPO training for KernelLLM-Agent"
requires-python = ">=3.10"
dependencies = [
  "torch==2.4.0",
  "triton==3.0.0",
  "numpy>=1.26",
  "pydantic>=2.7",
  "rich>=13.7",
  "matplotlib>=3.8",
  "transformers>=4.44",
  "accelerate>=0.33",
  "datasets>=2.20"
]

[tool.setuptools.packages.find]
where = ["."]
